--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.scss
@@ -32,9 +32,9 @@ br{
 .insight-box {
     border: 1px solid #bbbbbb;
     cursor: pointer;
-    padding: 10px;
+    padding: 10px 30px;
     background-color: white;
-    margin: 10px 0px;
+    margin: -4px 10px 0px 0px;
     overflow-wrap: break-word;
 }
 
@@ -48,6 +48,8 @@ br{
 .insight-message {
     display: block;
     font-size: 12px;
+    margin-left: 32px;
+    margin-top: 6px;
 }
 
 .web-doc-text {
@@ -71,6 +73,10 @@ br{
     color:  #605e5c
 }
 
+.col-md-4-special{
+    width: 30.31%;
+}
+
 .solutions-small-card-outer{
     height: 50px;
     padding: 5px;
@@ -80,10 +86,10 @@ br{
 }
 
 .solutions-small-card{
+    border: 1px solid #bbbbbb;
     text-align: center;
     font-size: 18px;
     cursor: pointer;
-    border: 1px solid gray;
     height: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
