--- a/AngularApp/projects/diagnostic-data/src/lib/components/collapsible-list/collapsible-list-fabric/collapsible-list-fabric.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/collapsible-list/collapsible-list-fabric/collapsible-list-fabric.component.scss
@@ -3,6 +3,13 @@
     padding: 0px 10px;
     border-bottom: 1px solid #ccc;
 }
+
+.collapsable-list-less-margin {
+    margin-top: 5px;
+    padding: 0px 10px;
+    border-bottom: 1px solid #ccc;
+}
+
 .list-header {
     font-size: 14px;
     font-weight: 500;
