--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
@@ -37,9 +37,9 @@
       </div>
     </div>
     <div class="row" name="top-solution" style="border-bottom: 1px solid #ccc;padding-bottom:15px;">
-      <h3 style="font-size: 16px;font-weight: 700;margin: 2px 10px;">We think we found you a solution!</h3>
-      <p style="margin: 2px 10px;">Customers with similar problems were able to solve it by following these solutions below</p>
-      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="topLevelSolutions && topLevelSolutions.length>0">
+      <h3 style="font-size: 16px;font-weight: 700;margin: 2px 10px;">Try these potential solutions!</h3>
+      <p style="margin: 2px 10px;">Customers with similar problems were able to solve it with these resources below</p>
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="topLevelSolutions && topLevelSolutions.length>0 && !showSolutionsTimedout">
         <solution-view-container [solutionTitle]="topLevelSolutions[mainSolutionIndex].Title" [isRecommended]="true" [detector]="'detector'"
         [isAnalysisView]="false" [isKeystoneDetector]="false" [askReasonNotHelpful]="true">
         <markdown [data]="topLevelSolutions[mainSolutionIndex].DescriptionMarkdown"></markdown>
@@ -50,25 +50,41 @@
         <div style="margin: 15px 0; min-width: 300px;" *ngIf="topLevelSolutions && topLevelSolutions.length>1">
           <span>Try these other options:</span>
           <div class="row">
-            <div *ngFor="let sol of topLevelSolutions; let i =index" class="col col-md-4-special solutions-small-card-outer">
+            <table style="table-layout: fixed;width: 100%;"><tbody>
+              <tr style="height: 50px;">
+                <td *ngFor="let sol of topLevelSolutions; let i =index" style="max-width: 33%;white-space: nowrap;" [hidden]="(i < 3)? false: true">
+                    <div class="solutions-small-card" [ngStyle]="{'background-color': mainSolutionIndex==i? '#e8e8e8': 'white'}" (click)="selectSolution(sol, i)">
+                      <span>{{sol.Title}}</span>
+                    </div>
+                </td>
+              </tr>
+            </tbody></table>
+            <!--<div *ngFor="let sol of topLevelSolutions; let i =index" class="col col-md-4 solutions-small-card-outer" [hidden]="(i < 3)? false: true">
               <div class="solutions-small-card" [ngStyle]="{'background-color': mainSolutionIndex==i? '#e8e8e8': 'white'}" (click)="selectSolution(sol, i)">
                 <span>{{sol.Title}}</span>
               </div>
-            </div>
+            </div>-->
           </div>
         </div>
       </div>
-      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="fetchingDetectors || getPendingDetectorCount() > 0">
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="(fetchingDetectors || getPendingDetectorCount() > 0) && !showSolutionsTimedout">
         <loader-detector-view></loader-detector-view>
       </div>
-      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="!fetchingDetectors && getPendingDetectorCount() === 0 && (!topLevelSolutions || topLevelSolutions.length==0)">
-        <div class="support-doc-section">
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="!fetchingDetectors && (((getPendingDetectorCount() === 0) && (!topLevelSolutions || topLevelSolutions.length==0)) || showSolutionsTimedout)">
+        <!--<div class="support-doc-section">
           <markdown *ngIf="supportDocumentContent.length>0" [data]="supportDocumentContent"></markdown>
+        </div>-->
+        <div *ngFor="let doc of webDocuments;let i =index" class="article" style="margin: 10px 0px;" (click)="selectResult(doc)" tabindex="0" (keyup.enter)="selectResult(doc)" [hidden]="(i < 2 ) ? false : true">
+          <a style="font-weight:600;">{{doc.title}}
+          <i class="fa fa-external-link"></i>
+          </a>
+          <div class="article-link">{{doc.linkShort}}</div>
+          <div class="web-doc-text">{{doc.description}}</div>
         </div>
       </div>
     </div>
     <div class="row" name="documentation-results">
-      <collapsible-list-fabric [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + 2 + ')'">
+      <collapsible-list-fabric [iconProps]="documentationSectionIcon" [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + 2 + ')'" [lessMargin]="true">
         <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0" style="margin-left:25px;"><p style="font-weight: 500;">Azure Guides</p></collapsible-list-item>
         <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
           <div class="support-doc-section">
@@ -81,7 +97,7 @@
             <span style="margin-left:5px;font-weight:500;">Documents from the web</span>
           </div>
         </collapsible-list-item>
-        <collapsible-list-item body *ngFor="let doc of webDocuments;let i =index" style="display:inline-block; width: 90%; margin: 5px 2.5%;" [hidden]="(i < numArticlesExpanded ) ? false : !viewRemainingArticles">
+        <collapsible-list-item body *ngFor="let doc of webDocuments;let i =index" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
           <div class="article" (click)="selectResult(doc)" tabindex="0" (keyup.enter)="selectResult(doc)" >
               <a style="font-weight:600;">{{doc.title}}
               <i class="fa fa-external-link"></i>
@@ -90,21 +106,17 @@
               <div class="web-doc-text">{{doc.description}}</div>
           </div>
         </collapsible-list-item>
-        <a  *ngIf="webDocuments.length>numArticlesExpanded"
-          (click)="showRemainingArticles()"> 
-          {{viewOrHideAnchorTagText(viewRemainingArticles , webDocuments.length , numArticlesExpanded )}}   
-        </a>
       </collapsible-list-fabric>
     </div>
     <div class="row" name="detector-results">
-      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 24px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 5px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
         <div style="display: inline;" class="row">
           <i class="fa fa-circle-o-notch fa-spin spin-icon" style="display:inline;float:left; vertical-align:text-bottom;" aria-hidden="true"></i>
           <div class="sections-loading-title col-md-5" style="display: inline;">Observations and solutions</div>
           <div class="sections-loading-title col-md-3" style="display: inline;">Running checks {{detectors.length-getPendingDetectorCount()}}/{{detectors.length}}</div>
         </div>
       </div>
-      <collapsible-list-fabric *ngIf="issueDetectedViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Observations and solutions (' + issueDetectedViewModels.length + ')'">
+      <collapsible-list-fabric [iconProps]="observationSectionIcon" *ngIf="issueDetectedViewModels.length>0 && getPendingDetectorCount() === 0" [lessMargin]="true" [collapsed]="!(getPendingDetectorCount() === 0 && (!topLevelSolutions || topLevelSolutions.length==0) || showSolutionsTimedout)" [title]="'Observations and solutions (' + issueDetectedViewModels.length + ')'">
         <collapsible-list-item body *ngFor="let viewModel of issueDetectedViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
           <div class="insight-box">
             <div style="display: block;">
@@ -123,14 +135,14 @@
           </div>
         </collapsible-list-item>
       </collapsible-list-fabric>
-      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 24px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 5px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
         <div style="display: inline;" class="row">
           <i class="fa fa-circle-o-notch fa-spin spin-icon" style="display:inline;float:left; vertical-align:text-bottom;" aria-hidden="true"></i>
           <div class="sections-loading-title col-md-5" style="display: inline;">Successful checks</div>
           <div class="sections-loading-title col-md-3" style="display: inline;">Running checks {{detectors.length-getPendingDetectorCount()}}/{{detectors.length}}</div>
         </div>
       </div>
-      <collapsible-list-fabric *ngIf="successfulViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Successful Checks (' + successfulViewModels.length + ')'">
+      <collapsible-list-fabric [iconProps]="successfulSectionIcon" *ngIf="successfulViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [lessMargin]="true" [title]="'Successful Checks (' + successfulViewModels.length + ')'">
         <collapsible-list-item body *ngFor="let viewModel of successfulViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
           <div class="insight-box">
             <div style="display: block;">
