--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-view-container/solution-view-container.component.scss
@@ -3,6 +3,7 @@
     border: 1px solid #C8C6C4;
     box-sizing: border-box;
     margin-top: 18px;
+    box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.132), 0px 0.3px 0.9px rgba(0, 0, 0, 0.108);
 }
 
 .solution-container-title {
