Catch downtime zoom behavior change from detector-list-analysis and pass it to the parent detector view that is showing downtimes chart in AppLens.

--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-analysis/tab-analysis.component.html
@@ -1,8 +1,8 @@
 <div style="margin-left:20px">
   <comm-alert></comm-alert>
-  <detector-container [detector]="analysisId" [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
+  <detector-container [detector]="analysisId" [isAnalysisView]="true" (downTimeChanged)="onDowntimeChanged($event)" [downtimeZoomBehavior]="downtimeZoomBehavior"></detector-container>
 </div>
 
-<detector-list-analysis #detectorListAnalysis detectorParmName="detector"></detector-list-analysis>
+<detector-list-analysis #detectorListAnalysis detectorParmName="detector" (updateDowntimeZoomBehavior) = "onUpdateDowntimeZoomBehavior($event)"></detector-list-analysis>
 
 <router-outlet (activate)="onActivate($event)"></router-outlet>
