Remove identifier for detector container, not required.

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,4 +1,4 @@
-<detector-container #detectorContainer *ngIf="displayDetectorContainer" [detector]="analysisDetector"
+<detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector"
   [hideDetectorControl]='isCaseSubmissionSolutionIFrame' [isAnalysisView]="true" [downtimeZoomBehavior]="downtimeZoomBehavior"
   (downTimeChanged)="onDowntimeChanged($event)"></detector-container>
 <div *ngIf="showSearchBar" class="search-box">
