--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.scss
@@ -20,6 +20,7 @@ body {
 .onboarding-container {
     height: 100%;
     background-color: white;
+    margin-top: 10px;
 }
 
 .custom-btn {
@@ -290,6 +291,21 @@ span.rotate {
 [tooltip]:hover:before {
     visibility: visible;
     opacity: 1;
+}
+
+
+.panel-text {
+    font-size: 12px;
+    line-height: 16px;
+    margin-left: 20px;
+    font-weight: 400;
+}
+
+.submitted-panel-text {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px 0px;
+    font-size: 14px;
 }
 
 .publishAccessDenied .modal-header {
