Onboard new chat agent

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -3,8 +3,8 @@
     <div class="cxpChat-ConfText">
       <div class="cxpChat-ConsentContainer">
         <div>
-          <img src="assets/img/jen.jpg" class="agentImage">
-          <span class="agentName"> Jen </span>
+          <img src="assets/img/cindy.jpg" class="agentImage">
+          <span class="agentName"> Cindy </span>
         </div>
         <button class="cxpChat-RemoveOutline cxpChat-FlatButton" role="button" title="Close"
           aria-label="Close chat dialogue" (click)="hideChatConfDialog(true, 'CloseIcon')">
