--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
@@ -8,6 +8,6 @@
 <ng-container *ngIf="showRiskAlertsNotification">
   <fab-message-bar [messageBarType]="riskAlertNotificationStatusType" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true"
     [styles]="styles" overflowButtonAriaLabel="See more" >{{riskAlertMessage}} <a
-      (click)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)" tabindex="0" aria-label="riskAlertMessage" (keyup.enter)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)">View more details</a>.
+      (click)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)" tabindex="0" aria-label="riskAlertMessage" (keyup.enter)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)">here</a> to view more details.
   </fab-message-bar>
 </ng-container>
