Creating generateResiliencyPDF, adding component to command bar and adding response.temp.json to simulate JSON response

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-command-bar/detector-command-bar.component.html
@@ -21,6 +21,8 @@
     </fab-command-bar-item>
     <fab-command-bar-item key="sendFeedback" text="Feedback" [iconProps]="{ iconName: 'Emoji2' }"
       (click)="sendFeedback()"></fab-command-bar-item>
+    <fab-command-bar-item key="generateResiliencyPDF" text="Download Resiliency Report" [iconProps]="{ iconName: 'DownloadDocument' }"
+      (click)="generateResiliencyPDF()"></fab-command-bar-item>
   </items>
 
   <far-items>
