--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/daas/daas.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/daas/daas.component.scss
@@ -1,6 +1,11 @@
 td {
     padding-right:10px;
-    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+th {
+    padding-right:10px;
+    padding-bottom: 10px;
 }
 
 .status-box {
