--- a/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/onboarding-flow/onboarding-flow.component.html
@@ -176,8 +176,17 @@
 
           </split-area>
           <split-area size="15">
-            <div class="compilation-output-container">
-              <div *ngFor="let item of buildOutput" class="compilation-output">{{item}}</div>
+            <div class="compilation-output-container">              
+              <div class = "compilation-detailed-output-container">
+                <div class = "compilation-detailed-output-rowEntry" *ngFor = "let item of detailedCompilationTraces" >
+                  <div class="compilation-detailed-output-entryCell compilation-detailed-output-iconCell">
+                    <span class="fa status-icon" [ngClass] = "getfaIconClass(item)"></span>
+                  </div>
+                  <div class="compilation-detailed-output-entryCell">
+                    <span>{{item.message}}</span>
+                  </div>
+                </div>
+              </div>
             </div>
           </split-area>
         </split>
