--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.scss
@@ -124,7 +124,5 @@
 .home-banner {
   font-size: 12px;
   line-height: 30px;
-  padding: 2px 5px;
-  display: flex;
-  align-items: center;
+  padding: 2px 5px 2px 30px;
 }
