--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -21,7 +21,7 @@
       <div *ngIf="showDiagnosticsConsentOption" class="cxpChat-ConsentContainer">
         <div class="cxpChat-ConsentOptionContainer">
           <div>
-            <span>Share diagnostic information?</span>
+            <span>Allow collection of advanced diagnostic information?</span>
           </div>
           <div class="cxpChat-ConsentText">
             <sup class="cxpChat-Required"> * </sup>
